--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
 
 <body>
     <section>
-        <h1>Escolha abaixo o tipo de Criptografia</h1>
-        <label for="cifraCesar">Cifra de César</label>
-        <input type="radio" name="coder" id="cifraCesar">
-        <label for="base64">base64</label>
-        <input type="radio" name="coder" id="base64">
+        <h1>(De)Codificar</h1>
+        
         <form action="#">
             <div id="here">
             </div>
