--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <form action="#">
             <div id="here">
             </div>
+            <button type="submit"id="prevent">teste</button>
         </form>
     </section>
     <script src="./index.js"></script>
