--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>(De)codificador</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="shortcut icon" href="./imagens/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-    <section>
-        <h1 id="start">(De)Codificar</h1>
-        <form action="#">
-            <div id="here">
-            </div>
-        </form>
+    <section class="main">
+        <div class="zima">
+            <h1 id="start" class="tittle">[De}Codificar</h1>
+            <form action="#">
+                <div id="here">
+                </div>
+            </form>
+        </div>
     </section>
+    <footer><p class="font">Desenvolvido por Igor Santos</p></footer>
     <script src="./index.js"></script>
 </body>
 
