--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </form>
         </div>
     </section>
-    <footer><p class="font">Desenvolvido por Igor Santos</p></footer>
+    <footer><p class="font">Desenvolvido por <a href="https://github.com/igorsans" target="_blank">Igor Santos</a></p></footer>
     <script src="./index.js"></script>
 </body>
 
